--- a/.github/workflows/build_linux.yml
+++ b/.github/workflows/build_linux.yml
@@ -26,3 +26,21 @@ jobs:
         path: |
           ${{ github.workspace }}/build_output
           ${{ github.workspace }}/*.whl
+          
+  build_bionic_py38:
+    runs-on: ubuntu-18.04
+    steps:
+    - uses: actions/checkout@v2
+    - uses: actions/setup-python@v2
+      with:
+        python-version: '3.8'
+    - name: Install packages
+      run: source ci_tools/ci.sh && ci_setup
+    - name: Build
+      run: source ci_tools/ci.sh && ci_build
+    - uses: actions/upload-artifact@v2
+      with:
+        name: build_18.04_py38
+        path: |
+          ${{ github.workspace }}/build_output
+          ${{ github.workspace }}/*.whl
