--- a/.github/workflows/build_linux.yml
+++ b/.github/workflows/build_linux.yml
@@ -12,15 +12,15 @@ jobs:
   build_bionic:
     runs-on: ubuntu-18.04
     steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-python@v2
+    - uses: actions/checkout@v3
+    - uses: actions/setup-python@v4
       with:
         python-version: '3.7'
     - name: Install packages
       run: source ci_tools/ci.sh && ci_setup
     - name: Build
       run: source ci_tools/ci.sh && ci_build
-    - uses: actions/upload-artifact@v2
+    - uses: actions/upload-artifact@v3
       with:
         name: build_18.04
         path: |
@@ -30,17 +30,35 @@ jobs:
   build_bionic_py38:
     runs-on: ubuntu-18.04
     steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-python@v2
+    - uses: actions/checkout@v3
+    - uses: actions/setup-python@v4
       with:
         python-version: '3.8'
     - name: Install packages
       run: source ci_tools/ci.sh && ci_setup
     - name: Build
       run: source ci_tools/ci.sh && ci_build
-    - uses: actions/upload-artifact@v2
+    - uses: actions/upload-artifact@v3
       with:
         name: build_18.04_py38
+        path: |
+          ${{ github.workspace }}/build_output
+          ${{ github.workspace }}/*.whl
+          
+  build_focal_py38:
+    runs-on: ubuntu-20.04
+    steps:
+    - uses: actions/checkout@v3
+    - uses: actions/setup-python@v4
+      with:
+        python-version: '3.8'
+    - name: Install packages
+      run: source ci_tools/ci.sh && ci_setup
+    - name: Build
+      run: source ci_tools/ci.sh && ci_build
+    - uses: actions/upload-artifact@v3
+      with:
+        name: build_20.04_py38
         path: |
           ${{ github.workspace }}/build_output
           ${{ github.workspace }}/*.whl
