CI: Use openEMS version with better out-of-the-box Python support and update to newer colab version

--- a/.github/workflows/build_linux.yml
+++ b/.github/workflows/build_linux.yml
@@ -62,3 +62,21 @@ jobs:
         path: |
           ${{ github.workspace }}/build_output
           ${{ github.workspace }}/*.whl
+          
+  build_jammy_py310:
+    runs-on: ubuntu-22.04
+    steps:
+    - uses: actions/checkout@v3
+    - uses: actions/setup-python@v4
+      with:
+        python-version: '3.10'
+    - name: Install packages
+      run: source ci_tools/ci.sh && ci_setup
+    - name: Build
+      run: source ci_tools/ci.sh && ci_build
+    - uses: actions/upload-artifact@v3
+      with:
+        name: build_22.04_py310
+        path: |
+          ${{ github.workspace }}/build_output
+          ${{ github.workspace }}/*.whl
