--- a/.github/workflows/build_linux.yml
+++ b/.github/workflows/build_linux.yml
@@ -1,7 +1,13 @@
 name: build_linux
 
 on:
-  workflow_dispatch
+  workflow_dispatch:
+    inputs:
+        debug_enabled:
+          type: boolean
+          description: 'Run the build with tmate debugging enabled (https://github.com/marketplace/actions/debugging-with-tmate)'
+          required: false
+          default: false
 #  push:
 #  pull_request:
 #    paths:
@@ -36,6 +42,10 @@ jobs:
         python-version: '3.10'
     - name: Install packages
       run: source ci_tools/ci.sh && ci_setup
+    # Enable tmate debugging of manually-triggered workflows if the input option was provided
+    - name: Setup tmate session
+      uses: mxschmitt/action-tmate@v3
+      if: ${{ github.event_name == 'workflow_dispatch' && inputs.debug_enabled == 'true' }}
     - name: Build
       run: source ci_tools/ci.sh && ci_build
     - uses: actions/upload-artifact@v3
