--- a/.github/workflows/build_linux.yml
+++ b/.github/workflows/build_linux.yml
@@ -27,7 +27,7 @@ jobs:
     # Enable tmate debugging of manually-triggered workflows if the input option was provided
     - name: Setup tmate session
       uses: mxschmitt/action-tmate@v3
-      if: ${{ github.event_name == 'workflow_dispatch' && inputs.debug_enabled == 'true' }}
+      if: ${{ github.event_name == 'workflow_dispatch' && inputs.debug_enabled }}
     - name: Build
       run: source ci_tools/ci.sh && ci_build
     - uses: actions/upload-artifact@v3
